2005-05-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c: Rename
	cairo_pdf_surface_create_for_callback() to
	cairo_pdf_surface_create_for_stream(), and change PDF constructors
	to take width and height as points and move PPI setting to
	cairo_pdf_surface_set_ppi()

2005-05-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): Fix
	misplaced goto.
	
2005-05-12  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-image-surface.c: (_cairo_image_surface_create_with_masks):
	  Fix image->data to be unsigned

	* src/cairo-glitz-surface.c: (_cairo_glitz_surface_get_image):
	* src/cairo-image-surface.c:
	(_cairo_image_surface_create_for_pixman_image),
	* src/cairo-xlib-surface.c: (_get_image_surface),
	(_draw_image_surface), (_xlib_glyphset_cache_create_entry):
	Track change in signedness of data member/parameter.

2005-05-12  Carl Worth  <cworth@cworth.org>

	Update xcb backend to compile after recent API changes:

	* src/cairo-xcb-surface.c: (_cairo_xcb_surface_finish):
	Fix missing return value.
	(_cairo_xcb_surface_acquire_source_image): Remove calls to
	non-existent cairo_surface functions.
	(_cairo_xcb_surface_set_matrix): Update for new matrix member names.
	(_cairo_xcb_surface_get_extents): Fix typo.

2005-05-12  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/paint-with-alpha-ref.png:
	* test/paint-with-alpha.c: (draw), (main): Add new test for bug in
	cairo_paint_with_alpha not transforming the source.

	* src/cairo-gstate.c: (_cairo_gstate_mask): Use a transformed copy
	of the source just like we do in all the other calls to
	cairo_surface_composite. Fixes the bug tested by
	test/paint-with-alpha.

2005-05-12  Keith Packard  <keithp@keithp.com>

	reviewed by: otaylor

	* src/cairo-gstate.c: (_get_mask_extents):
	_get_mask_extents creates a pixman region but
	neglects to destroy it.

2005-05-11  Owen Taylor  <otaylor@redhat.com>
